Fixed DragPanel resize so that when/if the panel is offscreen it will auto position back into view.

--- a/src/app/components/Admin/registered-components/RichTextEditor/_plugins/withGrid/Panel/_style.scss
+++ b/src/app/components/Admin/registered-components/RichTextEditor/_plugins/withGrid/Panel/_style.scss
@@ -7,6 +7,12 @@
         outline: none;
         user-select: none;
         align-items: stretch !important;
+        padding: 4px;
+        border: 2px dashed lighten($color-grey, 5%);
+
+        &:hover {
+            border: 2px dashed $color-grey;
+        }
 
         .actions {
             position: absolute;
@@ -36,8 +42,12 @@
             > div {
                 width: 100%;
                 height: 100%;
-                border: 2px dashed $color-grey;
+                border: 2px dashed lighten($color-grey, 5%);
                 padding: 8px;
+
+                &:hover {
+                    border: 2px dashed $color-grey;
+                }
             }
 
             [type='embed'] {
